--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Xu Han - Department of Computer Science and Technology, Tsinghua University </title>
-    <meta name="description" content="I am a Ph.D. student in the Department of Computer Science and Technology at Tsinghua University, advised by Professor Zhiyuan Liu. My research interests focus on the intersection of natural language processing, deep learning and computer systems.">
-    <meta name="keywords" content="Xu Han, THU, Tsinghua University, CST, Department of Computer Science and Technology, NLP, Natural Language Processing, DL, Deep Learning, Computer Systems, Homepage">
-    <meta name="author" content="Xu Han">
+    <title>Yang Haodong - Department of Computer Science and Technology, Harbin Institute of Technology </title>
+    <meta name="description" content="">
+    <meta name="keywords" content="Homepage">
+    <meta name="author" content="Yang Haodong">
     <link rel="icon" href="static/logo.jpg">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font.css">
